# NCD_Fundings_submission

./: README.md  package.json
contract/: Cargo.toml  README.md
contract/src/: metadata.rs
src/: config.js
