[package]
name = "Funding contract"
version = "0.1.0"
authors = ["Daniel Bezerra <danielbezerrakmx@gmail.com>"]
edition = "2022"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.4"
serde_json = "1.0"


[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
